--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^7.9.0",
     "@tailwindcss/vite": "^4.1.13",
+    "axios": "^1.11.0",
     "framer-motion": "^12.23.12",
+    "lucide-react": "^0.543.0",
     "react": "^19.1.1",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.1.1",
-    "tailwindcss": "^4.1.13"
+    "react-hot-toast": "^2.6.0",
+    "react-router-dom": "^7.8.2",
+    "recharts": "^3.2.0",
+    "tailwindcss": "^4.1.13",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
